@@ -3,30 +3,36 @@ package io.jitter.resources;
 import com.codahale.metrics.annotation.Timed;
 import com.google.common.base.Preconditions;
 import io.dropwizard.jersey.caching.CacheControl;
-import io.dropwizard.jersey.params.DateTimeParam;
+import io.dropwizard.jersey.jsr310.LocalDateTimeParam;
 import io.jitter.api.ResponseHeader;
 import io.jitter.api.search.DocumentsResponse;
 import io.jitter.api.search.SearchResponse;
 import io.jitter.core.search.SearchManager;
 import io.jitter.core.search.TopDocuments;
 import io.jitter.core.utils.Epochs;
-import io.swagger.annotations.*;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.ws.rs.*;
+import jakarta.ws.rs.core.*;
 import org.apache.lucene.queryparser.classic.ParseException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import javax.validation.constraints.NotEmpty;
-import javax.ws.rs.*;
-import javax.ws.rs.core.*;
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
 
 @Path("/search")
-@Api(value = "/search", description = "Search endpoint")
+@Tag(name = "/search", description = "Search endpoint")
 @Produces(MediaType.APPLICATION_JSON + "; charset=utf-8")
 public class SearchResource {
     private static final Logger logger = LoggerFactory.getLogger(SearchResource.class);
@@ -44,34 +50,32 @@ public class SearchResource {
     @GET
     @Timed
     @CacheControl(maxAge = 1, maxAgeUnit = TimeUnit.HOURS)
-    @ApiOperation(
-            value = "Searches documents by keyword query",
-            notes = "Returns a search response",
-            response = SearchResponse.class
+    @Operation(
+            summary = "Searches documents by keyword query",
+            description = "Returns a search response"
     )
     @ApiResponses(value = {
-            @ApiResponse(code = 400, message = "Invalid query"),
-            @ApiResponse(code = 404, message = "No results found"),
-            @ApiResponse(code = 500, message = "Internal Server Error")
+            @ApiResponse(responseCode = "400", description = "Invalid query"),
+            @ApiResponse(responseCode = "404", description = "No results found"),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error")
     })
-    public SearchResponse search(@ApiParam(value = "Search query", required = true) @QueryParam("q") @NotEmpty String q,
-                                 @ApiParam(hidden = true) @QueryParam("fq") Optional<String> fq,
-                                 @ApiParam(value = "Limit results", allowableValues="range[1, 10000]") @QueryParam("limit") @DefaultValue("1000") Integer limit,
-                                 @ApiParam(value = "Include retweets") @QueryParam("retweets") @DefaultValue("false") Boolean retweets,
-                                 @ApiParam(value = "Maximum document id") @QueryParam("maxId") Optional<Long> maxId,
-                                 @ApiParam(value = "Epoch filter") @QueryParam("epoch") Optional<String> epoch,
-                                 @ApiParam(value = "Day filter") @QueryParam("day") Optional<DateTimeParam> day,
-                                 @ApiParam(hidden = true) @Context UriInfo uriInfo) {
+    public SearchResponse search(@Parameter(name = "Search query", required = true) @QueryParam("q") @NotBlank String q,
+                                 @Parameter(hidden = true) @QueryParam("fq") Optional<String> fq,
+                                 @Parameter(name = "Limit results", schema = @Schema(minimum = "1", maximum = "10000")) @QueryParam("limit") @DefaultValue("1000") Integer limit, @Parameter(name = "Include retweets") @QueryParam("retweets") @DefaultValue("false") Boolean retweets,
+                                 @Parameter(name = "Maximum document id") @QueryParam("maxId") Optional<Long> maxId,
+                                 @Parameter(name = "Epoch filter") @QueryParam("epoch") Optional<String> epoch,
+                                 @Parameter(name = "Day filter") @QueryParam("day") Optional<LocalDateTimeParam> day,
+                                 @Parameter(hidden = true) @Context UriInfo uriInfo) {
         MultivaluedMap<String, String> params = uriInfo.getQueryParameters();
 
         try {
             long startTime = System.currentTimeMillis();
-            String query = URLDecoder.decode(q, "UTF-8");
-            String filterQuery = URLDecoder.decode(fq.orElse(""), "UTF-8");
+            String query = URLDecoder.decode(q, StandardCharsets.UTF_8);
+            String filterQuery = URLDecoder.decode(fq.orElse(""), StandardCharsets.UTF_8);
             long[] epochs = Epochs.parseEpoch(epoch);
 
             if (day.isPresent()) {
-                DateTimeParam dateTimeParam = day.get();
+                LocalDateTimeParam dateTimeParam = day.get();
                 epochs = Epochs.parseDay(dateTimeParam.get());
             }
 
